Update many deps, demo API field names

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
             <div>
               <label for="sort">Sort By</label>
               <select id="sort" type="text">
-                <option value="last_name;asc">Last Name</option>
-                <option value="hours_worked;desc">Hours Worked</option>
+                <option value="lastName;asc">Last Name</option>
+                <option value="hoursWorked;desc">Hours Worked</option>
               </select>
             </div>
           </div>
@@ -33,6 +33,6 @@
       <section class="card" id="detail"></section>
     </div>
 
-    <script src="./index.ts"></script>
+    <script src="./index.ts" type="module"></script>
   </body>
 </html>
